--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 
 <html>
 	<head>
+		<title>Application Form</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>
 	</head>
 	
 	<body>
@@ -30,12 +35,13 @@
 						<li><a href ="#">Home</a></li>
 						<li><a href ="#">About</a></li>
 						<li><a href ="#">Contact</a></li>
+						
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Profile<span class="caret"></span></a>
+							<a href="#" class="drowpdown-toggle" data-toggle="dropdown">My Profile <span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href ="#">Account</a></li>
-								<li><a href ="#">Settings</a></li>
-								<li><a href ="#">Logout</a></li>
+								<li><a href="#">Account</a></li>
+								<li><a href="#">Settings</a></li>
+								<li><a href="#">Sign Out</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -99,7 +105,7 @@
 		
 			<!--JavaScript Files-->
 			<script src="js/form.js"></script>
-			<script src="bootstrap/js/bootstrap.js"></script>
+			
 		</div>
 	</body>
 </html>
